# donghua-unofficial-api

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  start.py
.github/workflows/: publish.yml
app/: main.py
app/api/: Health.py  Router.py
app/api/Models/: ApiResponseModels.py  Parser.py
app/api/v1/: Completed.py  Detail.py  Download.py  EpisodeLists.py  Filters.py  Genres.py  Home.py  Latest.py  Ongoing.py  Popular.py  Schedule.py  Search.py  Stream.py  Test.py
app/web/: index.py
