[project]
name = "donghua-api"
version = "1.0.0"
description = "Unofficial API for Donghub.vip"
authors = [
    {name = "zhadev", email = "cp.zhadev@gmail.com"},
]
dependencies = [
    "fastapi>=0.119.1",
    "uvicorn>=0.38.0", 
    "httpx>=0.28.1",
    "beautifulsoup4>=4.14.2",
    "python-multipart>=0.0.20"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0"
]

[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"
