[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "donghua-unofficial-api"
version = "1.0.0"
description = "Unofficial API for Donghub.vip - Chinese Animation Streaming Platform"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "zhadev", email = "cp.zhadev@gmail.com"},
]
keywords = ["donghua", "api", "scraper", "streaming", "chinese-animation", "anime"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "httpx>=0.25.2",
    "beautifulsoup4>=4.12.2",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[project.urls]
"Homepage" = "https://github.com/zhadevv/donghua-unofficial-api"
"Bug Reports" = "https://github.com/zhadevv/donghua-unofficial-api/issues"
"Source" = "https://github.com/zhadevv/donghua-unofficial-api"

[project.scripts]
donghua-api = "start:main"
