[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="donghua-unofficial-api"
version = "1.0.0"
description = "Unofficial API for Donghub.vip - Chinese Animation Streaming Platform"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "zhadev", email = "cp.zhadev@gmail.com"},
]
keywords = ["donghua", "api", "scraper", "streaming", "chinese-animation", "anime"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "fastapi>=0.119.1",
    "uvicorn>=0.38.0", 
    "httpx>=0.28.1",
    "beautifulsoup4>=4.14.2",
    "python-multipart>=0.0.20",
]

requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[project.urls]
"Homepage" = "https://github.com/zhadevv/donghua-unofficial-api"
"Bug Reports" = "https://github.com/zhadevv/donghua-unofficial-api/issues"
"Source" = "https://github.com/zhadevv/donghua-unofficial-api"

[project.scripts]
donghua-api = "start:main"
